--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -1,6 +1,7 @@
 ---
 title: Responsive Styles | Dank
 description: Dank provides support for responsive styles through the use of media queries.
+canonical: https://dank.style/
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
