feat: pushed meta data

--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Button | UI
+description: A Button component is used to create clickable elements that perform an action when pressed.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Button" />
@@ -25,10 +30,6 @@ import { createButton } from '@universa11y/button';
 import { styled } from '@dank-style/react';
 
 import Wrapper from '../Wrapper';
-
-# Button
-
-A Button component is used to create clickable elements that perform an action when pressed.
 
 # Installation
 
