feat: utils added

--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -8,7 +8,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/Button" />
 
 import { Button } from './Button';
-import { transformedCode } from '../../../utils';
+import { transformedCode } from '../../utils';
 import {
   AppProvider,
   CodePreview,
