feat: new examples for plugins

--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -70,8 +70,8 @@ While NativeBase provides a comprehensive solution for building web and mobile a
 ## Non goals
 
 - Don’t solve problems beyond styling!
-- Accessibility (check universa11y.dev)
-- Design (check gluestack-ui)
+- Accessibility (check gluestack-ui)
+- Design (check gluestack-ui again!)
 - Animation (check examples with Legend-Motion)
 
 ## Future Considerations:
