feat: latest version install

--- a/example/storybook/src/components/Select/index.stories.mdx
+++ b/example/storybook/src/components/Select/index.stories.mdx
@@ -4,6 +4,6 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Select
 
-<Canvas style={{ height: 5s00 }}>
+<Canvas style={{ height: 500 }}>
   <Story id="stories-forms-select--select" />
 </Canvas>
