feat: change-repo

--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -377,13 +377,13 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
     showArgsController={false}
     metaData={{
       code: `
-<Button mt="$4" style="solid">
+<Button mt="$4" variant="solid">
    <Button.Text>Button</Button.Text>
  </Button>
-<Button mt="$4" style="outline">
+<Button mt="$4" variant="outline">
    <Button.Text>Button</Button.Text>
  </Button>
-<Button mt="$4" style="link">
+<Button mt="$4" variant="link">
    <Button.Text>Button</Button.Text>
  </Button>
     `,
@@ -441,7 +441,7 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
    <InfoIcon mr="$2" color="$white" />
    <Button.Text>LeftIcon</Button.Text>
  </Button>
- <Button style="solid" mt="$2">
+ <Button variant="solid" mt="$2">
    <Button.Text>RightIcon</Button.Text>
    <AddIcon ml="$2" color="$white" />
  </Button>
