--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: Button | UI
 description: A Button component is used to create clickable elements that perform an action when pressed.
 ---
@@ -537,4 +537,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Button` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/button/index.tsx) of the styled `Button` components.
+Default styling of all these components can be found in the `components/Button` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/button/index.tsx) of the styled `Button` components. -->
