fix: updated meta description

--- a/example/storybook/src/advanced/Architecture/index.stories.mdx
+++ b/example/storybook/src/advanced/Architecture/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Architecture | Dank
-description: Internal workings of Dank.
+description: The architecture of dank is based on the concept of styled components, which enhances existing components to make them customizable and themeable.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
