--- a/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
+++ b/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Babel Plugins | Dank
-description: All the Babel plugins Dank provides for its ecosystem.
+description: All the Babel plugins Dank provides for its ecosystem. It transpiles your styled function calls and resolves the component styling in build time.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
@@ -24,7 +24,11 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 Here’s a small diagram explaining how the flow works:
 
-<img src="/assets/BabelResolverSteps.png" />
+<img
+  src="/assets/BabelResolverSteps.png"
+  width="70%"
+  alt="Babel Resolver Steps"
+/>
 
 Your code gets transpiled in the build files like this:
 
