--- a/example/storybook/src/advanced/Specificity/index.stories.mdx
+++ b/example/storybook/src/advanced/Specificity/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Specificity | Dank
-description: A deep dive into the complexities of specificties and how it is handled in Dank.
+description: Improve your CSS specificity with getWeightBaseOnPath function - calculate the precedence of different styles and easily override. Learn more here!
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
