--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Descendant Styling | Dank
-description: A guide on how to style the descendants of a component.
+description: A guide on how to style the descendants of a component. With this, you can define styles that are passed down to children.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
