--- a/example/storybook/src/api/OverridingStyles/index.stories.mdx
+++ b/example/storybook/src/api/OverridingStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Overriding styles with sx | Dank
-description: Dank supports the use of an **`sx`** prop to override styles.
+description: The sx prop allows you to pass an object that supports tokens, media-queries, nesting and token-aware values to the component.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
