--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Responsive Styles | Dank
-description: Dank provides support for responsive styles through the use of media queries.
+description: Dank provides support for responsive styles through the use of media queries. You can define your breakpoints and other configuration options.
 canonical: https://dank.style/
 ---
 
