--- a/example/storybook/src/api/UtilityProps/index.stories.mdx
+++ b/example/storybook/src/api/UtilityProps/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Utility Props | Dank
-description: Writing inline styles with Utlity Props.
+description: Writing inline styles with Utlity Props. We provide you the ability to pass down utility props on any Styled Component which internally converts to `sx` prop.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
