--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Variants | Dank
-description: How variants works in Dank.
+description: Dank allows you to easily create different variations of a component with different styles for more flexibility and reusability of components.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
