--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation | Dank
-description: A Quick Installation guide for Dank
+description: A Quick Installation guide for Dank. To get started with dank, you'll need to install it using either npm or yarn.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
@@ -132,7 +132,7 @@ module.exports = {
 };
 ```
 
-## Sever-side rendering
+## Server-side rendering
 
 It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file.
 
