--- a/example/storybook/src/getting-started/TypeScript/index.stories.mdx
+++ b/example/storybook/src/getting-started/TypeScript/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: TypeScript | Dank
-description: A guide to enable TypeScript for aliases and tokens.
+description: Learn how to use TypeScript for defining aliases and tokens in design systems. Achieve consistency in UI building using design tokens.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
