--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Performance | Dank
-description: Know about how performant is dank.
+description: Know about how performant is dank. It uses a babel plugin for pre-computing styles during the build process, and runtime performance optimizations.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
