--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: ColorMode Based Styles | Dank
-description: A guide for color mode dependent styles inside the component config .
+description: A guide for color mode dependent styles inside the component config. You have to define a `_light` or `_dark` key in which you can define your styling.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
