--- a/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Platform Based Styles | Dank
-description: Writing platform based styles in Dank
+description: Writing platform based styles in Dank. This allows you to easily create styles that are specific to a particular platform that is, Web, iOS, or Android.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
