--- a/example/storybook/src/api/Specificity/index.stories.mdx
+++ b/example/storybook/src/api/Specificity/index.stories.mdx
@@ -1,3 +1,8 @@
+---
+title: Specificity | Dank
+description: Improve your CSS specificity with getWeightBaseOnPath function - calculate the precedence of different styles and easily override. Learn more here!
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Specificity" />
@@ -6,7 +11,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 Specificity order
 
-### API
+### API\
 
 ```jsx
 import React from 'react';
