--- a/example/storybook/src/api/StateBasesStyles/index.stories.mdx
+++ b/example/storybook/src/api/StateBasesStyles/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: State based styling | Dank
-description: How to write state based styles in Dank.
+description: This allows you to create dynamic and interactive styles that change based on user interactions or other events.
 ---
 
 import { Canvas, Meta, Story, Source } from '@storybook/addon-docs';
