--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: styled | Dank
-description: With styled, you can easily extend existing components and make them customizable and themeable.
+description: With styled, you can easily extend existing components and make them customizable and themeable. Dank has provided styled function for this.
 ---
 
 import { Meta } from '@storybook/addon-docs';
