--- a/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
+++ b/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: StyledProvider | Dank
-description: Dank Style exports a StyledProvider component that can be used to configure the library.
+description: Dank Style exports a StyledProvider component, a higher-order component that wraps your entire application and provides the library's configuration options.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
