--- a/example/storybook/src/overview/API/index.stories.mdx
+++ b/example/storybook/src/overview/API/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: API | Dank
-description: A brief about all the API that you get from Dank.
+description: A brief about all the API that you get from Dank. With our styled function, you can easily extend existing components and make them customizable and themeable.
 ---
 
 import { Meta } from '@storybook/addon-docs';
