--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction | Dank
-description: Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
+description: Dank is a performant styling library for React & React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
