fix: removed unwanted character

--- a/example/storybook/src/api/Specificity/index.stories.mdx
+++ b/example/storybook/src/api/Specificity/index.stories.mdx
@@ -11,7 +11,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 Specificity order
 
-### API\
+### API
 
 ```jsx
 import React from 'react';
