fix: meta title and description

--- a/example/storybook/src/plugins/Introduction/index.stories.mdx
+++ b/example/storybook/src/plugins/Introduction/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
-title: Custom Plugin | Dank
-description: Dank provides a Plugin to add support for Animation props.
+title: Introduction | Dank
+description: Dank provides a plugin system to extend existing functionality of styled function.
 canonical: https://dank.style/
 ---
 
